--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,10 @@
-FROM node:16-alpine
+FROM node:13.12.0-alpine
 
 RUN mkdir -p /app
 
 WORKDIR /app
 
-COPY package.json /app/
-COPY package-lock.json /app/
+COPY package*.json /app/
 
 RUN npm install
 
